Se agrega validación para obtener información de ususario y demás datos